# video-devour

./: .gitignore  ASR_PARAFORMER_V2_说明.md  ASR_SENSEVOICE_说明.md  LICENSE  README copy.md  README.md  config copy.yaml  package.json  pyproject.toml  requirements.txt  start_backend.sh  tasks.json
backend/algorithm/: CHUNK_MATCHING_优化说明.md  CONFIG_简化说明.md  CONFIG_配置说明.md  DATA_PROCESSOR_V2_说明.md  FRAMES_结构说明.md  MATCH_WITH_CONTEXT_说明.md  SEMANTIC_MATCHING_说明.md  TEXT_SIMILARITY_MATCHING_说明.md  VIDEO_CUT_优化说明.md  VIDEO_EXTRACT_FRAMES_问题修复.md  config copy.py  data_processor.py  fix_model_paths.py  image_processor.py  llm_handler.py  main.md  main.py  modelscope_manager.py  outline_handler.py  pipeline.py  semantic_matcher.py  test_data_processor.py  text_similarity_matcher.py  video_handler.py  vlm_handler.py  文件结构_时间戳命名说明.md  文件结构_统一目录说明.md
backend/api/: __init__.py  main.py
backend/devour/: asr_engine_paraformer.py  asr_engine_paraformer_v2.py  asr_engine_whisper.py
frontend/: README.md  index.html  jsconfig.json  package-lock.json  package.json  start.bat  start.sh  tailwind.config.js  vite.config.js  编辑器更新说明.md
frontend/docs/: THEME.md  (+6 more)
output/: asr_results_paraformer.json  asr_results_paraformer_v2.json  asr_results_sensevoice.json  asr_results_whisper.json  delasr.py  detailed_outline.md  detailed_outline_20251006_165036.md  detailed_outline_20251006_175852.md  detailed_outline_20251006_180441.md  llm_outline_prompt.txt  outline(old).md  outline.md  outline_20251006_165036.md  outline_20251006_175852.md  outline_20251006_180441.md  processed_dialogue.json
(+63 files in other folders)
